fixed overlapping of stitch fields, implemented related functionality

--- a/docs/css/tiles.css
+++ b/docs/css/tiles.css
@@ -12,7 +12,12 @@ fieldset fieldset figure div { height: 222px; }
 #prototype { width:0; height:0; overflow:hidden}
 
 foreignObject{margin:0; padding:0}
-foreignObject input {vertical-align: top; width: 6px; opacity: 0.7; background-color: #d33; font-size: 5px;border: 0;padding: 0;margin: 0;}
+foreignObject input {
+  vertical-align: top; width: 6px;
+  font-size: 5px;
+  border: 0;padding: 0;padding-left: 1px;margin: 0;
+  opacity: 0.05; background-color: #f33;
+}
 foreignObject input:focus { opacity: 1; width:30px; }
 
 input[type="number"] { width:3em; }
